<resources>
    <string name="app_name">My Application</string>
    <string name="algoritmdeu_negizderi">АЛГОРИТМДЕУ НЕГІЗДЕРІ</string>
    <string name="ortasy">ТУРБО ПАСКАЛЬ ПРОГРАММАЛАУ ОРТАСЫ</string>
    <string name="kirispe">ТУРБО ПАСКАЛЬ ТІЛІНЕ КІРІСПЕ</string>
    <string name="modul">ТУРБО ПАСКАЛЬДІҢ СТАНДАРТТЫ МОДУЛЬДЕРІ</string>
    <string name="operator">ТУРБО ПАСКАЛЬ ТІЛІНІҢ БАСҚАРУ ОПЕРАТОРЛАРЫ</string>
    <string name="sipattau">БАЗАЛЫҚ ҚҰРЫЛЫМДАРДЫ СИПАТТАУ</string>
    <string name="grvika">ТУРБО ПАСКАЛЬ ГРАФИКАСЫ</string>
    <string name="programmalau">МОДУЛЬДІК ПРОГРАММАЛАУ</string>
    <string name="fail">ФАЙЛДАРМЕН ЖҰМЫС ІСТЕУ</string>
    <string name="qurylum">МƏЛІМЕТТЕРДІҢ ДИНАМИКАЛЫҚ ҚҰРЫЛЫМЫ</string>
    <string name="taqyryptar">Тақырыптар</string>
    <string name="taqyryp">Тақырып:</string>
    <string name="viktorina">Викториналар</string>
    <string name="jasyp_alu">Жазып алу</string>
    <string name="sattilik">Бүгінгі күніңізге сәттілік тілейміз!</string>
    <string name="dostarmen_bolisu">Достармен бөлісу</string>
    <string name="baptaular">Баптаулар</string>
    <string name="shygu">Шығу</string>
    <string name="shyguy_qalaisyzba">Қосымшадан шығуды қалайсызба?</string>
    <string name="aty_jondi_oz">Мәліметтерді өзгерту</string>
    <string name="avany_ozg">Фотосуретті өзгерту</string>
    <string name="qupia_soz_ozg">Құпиясөзді өзгерту</string>
    <string name="qupia_sozkeminde">Құпия сөз кемінде 6 таңбадан тұруы керек</string>
    <string name="aty">Аты:</string>
    <string name="email">Email:</string>
    <string name="nomer">Номер:</string>
    <string name="jobaga_qoldau">Жобаға қолдау көрсету</string>
    <string name="til">Тіл</string>
    <string name="qosymsha_turaly">Қосымша туралы</string>
    <string name="bagalau">Бағалау</string>
    <string name="matin_jazynyz">Мәтін жазыңыз</string>
    <string name="artqa">Артқа</string>
    <string name="joiu">Жою</string>
    <string name="copy">Көшіру</string>
    <string name="atynyzdy_jaz">Толық атыңызды жазыңыз</string>
    <string name="tel_nomer">Номеріңізді жазыңыз</string>
    <string name="tekseru">Тексеру</string>
    <string name="sizdin_jinagan_u">Сіздің жинаған ұпайыңыз</string>
    <string name="bastau">Бастау !</string>
    <string name="qoljetimdi">Қолжетімді ақпараттармен қамтылған</string>
    <string name="tiimdi_pai">Тиімді пайдалану функциясымен</string>
    <string name="test_tap">Тест тапсыру мүмкіндігі</string>
    <string name="koshirildi">Көшірілді</string>
    <string name="dostar">Достар</string>
    <string name="upai">ұпай</string>
    <string name="upailar">Ұпайлар</string>
    <string name="Emal_jaz">Email жазыңыз</string>
    <string name="Qupia_soz_eng">Құпия сөз жазыңыз</string>
    <string name="zhana_qupia_sozder_saikes">Жаңа құпия сөздер сәйкес келмейді</string>
    <string name="qoldanystagy_quia">Қолданыстағы құпиясөз қате</string>
    <string name="qupia_sozdi_umyttynyz">Құпия сөзіңізді ұмыттыңыз ба?</string>
    <string name="zhana_qupia_sozdi_zhaz">Жаңа құпия сөзді жазыңыз</string>
    <string name="zhana_qupia_sozdi_qaita_zhaz">Жаңа құпия сөзді қайтадан жазыңыз</string>
    <string name="zhana_qup_tanbasy">Жаңа құпия сөздің таңбасы 6 дан кем</string>
    <string name="otinish_email_tolt">Өтініш,email толтырыңыз</string>
    <string name="otinish_pass_tolt">Өтініш,құпия сөзді жазыңыз</string>
    <string name="otinish_zhana_pass_tolt">Өтініш,жаңа құпия сөзді жазыңыз</string>
    <string name="otinish_zhana_pass_qaita_tolt">Өтініш,жаңа құпия сөзді қайтадан жазыңыз</string>
    <string name="otinish_at_tolt">Өтініш,толық атыңызды толтырыңыз</string>
    <string name="otinish_phone_tolt">Өтініш,телефон номеріңізді толтырыңыз</string>
    <string name="otinish_kute">Өтініш,күте тұрыңыз</string>
    <string name="satti_tirkelu">Сіз сәтті тіркелдіңіз</string>
    <string name="satti_kiru">Сіз сәтті кірдіңіз</string>
    <string name="okinishke_orai_tirkelu">Өкінішке орай сіз тіркеле алмадыңыз</string>
    <string name="okinishke_orai_kiru">Өкінішке орай сіз кіре алмадыңыз</string>
    <string name="kiru">Кіру</string>
    <string name="tirkelu">Тіркелу</string>
    <string name="dostar_tabu">Достар табу</string>
    <string name="menin_dostarym">Менің достарым</string>
    <string name="top_upailar">Топ ұпайлар</string>
    <string name="upai_satyp_alu">Ұпай сатып алу</string>
    <string name="dostarmen_jarysu">Достармен жарысу</string>
    <string name="bas_tartu">Бас тарту</string>
    <string name="oiyynga_shaqyruda">ойынға шақыруда...</string>
    <string name="oiyynga_shaqyru">ойынға шақыру...</string>
    <string name="saqtau">Сақтау</string>
    <string name="siz__akk">Сіз аккаунттан шығуды қалайсыз ба?</string>
    <string name="ia">Иә</string>
    <string name="zhoq">Жоқ</string>
    <string name="suret_tandalmady">Сурет таңдалмады</string>
    <string name="qatelik_qaita">Қателік,қайталап көрініз</string>
    <string name="izdeu">Іздеу...</string>
    <string name="tapsyruy">Тапсыруы </string>
    <string name="ret"> рет</string>
    <string name="qosymshada_qoldanylgan">Қосымшада қолданылған ақпараттар Б.Б.Бөрібаев және А.М.Махметованың (АЛГОРИТМДЕУ ЖƏНЕ ПРОГРАММАЛАУ ТІЛДЕРІ) атты кітаптан алынды.</string>
</resources>