<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LL"
    android:background="@color/white_ligth"
    tools:context=".QuizActivity">
    <ScrollView
        style="@style/LL"
        android:paddingBottom="50dp">
        <LinearLayout
            style="@style/LLV">
   <Button
       android:layout_marginTop="30dp"
       android:id="@+id/suraq1"
       android:text="@string/algoritmdeu_negizderi"
        style="@style/quiz_btn"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_ligth"/>
   <Button
        android:id="@+id/suarq2"
        android:text="@string/ortasy"
        style="@style/quiz_btn"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq3"
                android:text="@string/kirispe"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq4"
                android:text="@string/modul"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq5"
                android:text="@string/operator"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq6"
                android:text="@string/sipattau"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq7"
                android:text="@string/grvika"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq8"
                android:text="@string/programmalau"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq9"
                android:text="@string/fail"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
            <Button
                android:id="@+id/suarq10"
                android:text="@string/qurylum"
                style="@style/quiz_btn"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_ligth"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/back_rect"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/LL">
            <TextView
                style="@style/LL"
                android:text="@string/viktorina"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25dp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_highlight_off"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
</RelativeLayout>