<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LLV"
    android:background="@color/active"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@mipmap/icon_logo_foreground"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="0dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:text="ИНФОРМАТИКА"
        android:gravity="center"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/login_rect"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">


        <LinearLayout
            style="@style/LLV"
            android:layout_weight="2">
            <LinearLayout
                android:layout_weight="1"
                style="@style/LL">
                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Emal_jaz"
                    android:textSize="18dp"
                    android:textColor="@color/black_light_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                style="@style/LL">
                <EditText
                    android:id="@+id/edtName"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/atynyzdy_jaz"
                    android:textSize="18dp"
                    android:textColor="@color/black_light_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                style="@style/LL"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel_nomer"
                    android:textSize="18dp"
                    android:textColor="@color/black_light_light"/>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                style="@style/LL"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edtPass"
                    android:layout_weight="1"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Qupia_soz_eng"
                    android:inputType="textPassword"
                    android:textSize="18dp"
                    android:drawableRight="@drawable/ic_baseline_remove_red_eye"
                    android:textColor="@color/black_light_light"/>

            </LinearLayout>
            <Button
                android:id="@+id/btnRegister"
                style="@style/LL"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/dostar_fragment_btn"
                android:text="@string/tirkelu"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center" />
            <TextView
                android:id="@+id/txt_kiru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kiru"
                android:textColor="@color/blue_proz"
                android:textSize="20dp"
                android:layout_gravity="right"/>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>