<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LLV"
    android:background="@color/white"
    tools:context=".WriteActivity">
    <RelativeLayout
        style="@style/LL"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/saqtau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/saqtau"
            android:textColor="@color/blue_proz"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/qupia_soz_kem"
            android:layout_below="@id/saqtau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/qupia_sozkeminde"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/qupia_soz_eski"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/qupia_soz_kem"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            android:text="@string/Qupia_soz_eng"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/edtOldPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qupia_soz_eski"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/qupia_soz_zhana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtOldPass"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/zhana_qupia_sozdi_zhaz"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/edtNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qupia_soz_zhana"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/qupia_soz_zhana_qaita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNewPass"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/zhana_qupia_sozdi_qaita_zhaz"
            android:textColor="@color/black"
            android:textSize="13dp" />

        <EditText
            android:id="@+id/edtNewPassRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qupia_soz_zhana_qaita"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtNewPassRepeat"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/qupia_sozdi_umyttynyz"
            android:textColor="@color/blue_proz"
            android:textSize="16dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/back_rect"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/LL">
            <TextView
                style="@style/LL"
                android:text="@string/qupia_soz_ozg"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="25dp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_highlight_off"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
</RelativeLayout>